{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 60,
  "lineage": "ce51ae6f-673f-9a56-feea-4407f99cc6dc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Sub2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b28dfc7adc325ef4",
            "arn": "arn:aws:ec2:us-west-2:792446289821:instance/i-04bb021f1214bb2fa",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04bb021f1214bb2fa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "blake_coalfire",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0892b2a93f57878f5",
            "private_dns": "ip-10-1-1-33.us-west-2.compute.internal",
            "private_ip": "10.1.1.33",
            "public_dns": "ec2-34-218-79-49.us-west-2.compute.amazonaws.com",
            "public_ip": "34.218.79.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-082c1072bfb4c5671",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-075031f8a996a9c4c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c1a713153d20f618",
            "tags": {
              "Description": "Pub Sub 2 Red Hat",
              "Name": "coalfire_terraform_challenge"
            },
            "tags_all": {
              "Description": "Pub Sub 2 Red Hat",
              "Name": "coalfire_terraform_challenge"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-075031f8a996a9c4c"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:792446289821:internet-gateway/igw-06aff070be89d6a35",
            "id": "igw-06aff070be89d6a35",
            "owner_id": "792446289821",
            "tags": {
              "Name": "coalfire_terraform_challenge-igw"
            },
            "tags_all": {
              "Name": "coalfire_terraform_challenge-igw"
            },
            "vpc_id": "vpc-0ac569fc0a05865cc"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:792446289821:loadbalancer/app/alb-coalfire-challenge/c035243ddd231a98",
            "arn_suffix": "app/alb-coalfire-challenge/c035243ddd231a98",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-coalfire-challenge-1067575303.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:792446289821:loadbalancer/app/alb-coalfire-challenge/c035243ddd231a98",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-coalfire-challenge",
            "security_groups": [
              "sg-075031f8a996a9c4c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a2a291e122ea55bf"
              },
              {
                "subnet_id": "subnet-0b6789305f0420445"
              }
            ],
            "subnets": [
              "subnet-0a2a291e122ea55bf",
              "subnet-0b6789305f0420445"
            ],
            "tags": {
              "Name": "coalfire_terraform_challenge-alb"
            },
            "tags_all": {
              "Name": "coalfire_terraform_challenge-alb"
            },
            "vpc_id": "vpc-0ac569fc0a05865cc",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_lb_target_group.tg-1",
            "aws_security_group.default_public",
            "aws_subnet.private",
            "aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:792446289821:listener/app/alb-coalfire-challenge/c035243ddd231a98/27d8336abcfdc906",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:792446289821:targetgroup/lb-tg-1/21cb3518e56b8329",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:792446289821:listener/app/alb-coalfire-challenge/c035243ddd231a98/27d8336abcfdc906",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:792446289821:loadbalancer/app/alb-coalfire-challenge/c035243ddd231a98",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb_1",
            "aws_lb_target_group.tg-1",
            "aws_security_group.default_public",
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:792446289821:targetgroup/lb-tg-1/21cb3518e56b8329",
            "arn_suffix": "targetgroup/lb-tg-1/21cb3518e56b8329",
            "connection_termination": false,
            "deregistration_delay": "60",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:792446289821:targetgroup/lb-tg-1/21cb3518e56b8329",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lb-tg-1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 60,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ac569fc0a05865cc"
          },
          "dependencies": [
            "aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06aff070be89d6a35",
            "id": "r-rtb-0c9140ead98ab318d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c9140ead98ab318d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:792446289821:route-table/rtb-0c9140ead98ab318d",
            "id": "rtb-0c9140ead98ab318d",
            "owner_id": "792446289821",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06aff070be89d6a35",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "coalfire_terraform_challenge-rt"
            },
            "tags_all": {
              "Name": "coalfire_terraform_challenge-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac569fc0a05865cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab833c6d0e90579a",
            "route_table_id": "rtb-0c9140ead98ab318d",
            "subnet_id": "subnet-012b58644324cdd33"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00489f06b47cedf09",
            "route_table_id": "rtb-0c9140ead98ab318d",
            "subnet_id": "subnet-0c1a713153d20f618"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:792446289821:security-group/sg-075031f8a996a9c4c",
            "description": "coalfire_terraform_challenge default public SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-075031f8a996a9c4c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "71.227.129.1/32"
                ],
                "description": "VPN IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "coalfire_terraform_challenge_default_public_sg",
            "name_prefix": "",
            "owner_id": "792446289821",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "coalfire_terraform_challenge_public_sg"
            },
            "tags_all": {
              "Name": "coalfire_terraform_challenge_public_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac569fc0a05865cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:792446289821:subnet/subnet-0b6789305f0420445",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6789305f0420445",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "792446289821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "coalfire_terraform_challenge-private-0"
            },
            "tags_all": {
              "Name": "coalfire_terraform_challenge-private-0"
            },
            "vpc_id": "vpc-0ac569fc0a05865cc"
          },
          "dependencies": [
            "aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:792446289821:subnet/subnet-0a2a291e122ea55bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2a291e122ea55bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "792446289821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "coalfire_terraform_challenge-private-1"
            },
            "tags_all": {
              "Name": "coalfire_terraform_challenge-private-1"
            },
            "vpc_id": "vpc-0ac569fc0a05865cc"
          },
          "dependencies": [
            "aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:792446289821:subnet/subnet-012b58644324cdd33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012b58644324cdd33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "792446289821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "coalfire_terraform_challenge-public-0"
            },
            "tags_all": {
              "Name": "coalfire_terraform_challenge-public-0"
            },
            "vpc_id": "vpc-0ac569fc0a05865cc"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:792446289821:subnet/subnet-0c1a713153d20f618",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1a713153d20f618",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "792446289821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "coalfire_terraform_challenge-public-1"
            },
            "tags_all": {
              "Name": "coalfire_terraform_challenge-public-1"
            },
            "vpc_id": "vpc-0ac569fc0a05865cc"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:792446289821:vpc/vpc-0ac569fc0a05865cc",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0dec6f1fbe76c4503",
            "default_route_table_id": "rtb-0a9f7ff2d39e1ba24",
            "default_security_group_id": "sg-0fe66de96f55a553e",
            "dhcp_options_id": "dopt-06cc4f4f833bb2c9c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ac569fc0a05865cc",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-07d7cc26cde06545d",
            "ipv6_cidr_block": "2600:1f13:f36:3800::/56",
            "ipv6_cidr_block_network_border_group": "us-west-2",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a9f7ff2d39e1ba24",
            "owner_id": "792446289821",
            "tags": {
              "Name": "coalfire_terraform_challenge-vpc"
            },
            "tags_all": {
              "Name": "coalfire_terraform_challenge-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}